Enhance Docker setup for frontend development
- Updated docker-compose.yml to include environment variable for API base and added volume for node_modules.
- Modified Dockerfile to create a development stage for the frontend.
- Updated package.json and package-lock.json to specify exact versions for devDependencies.

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -26,3 +26,12 @@ COPY --from=builder /app/package.json ./package.json
 
 EXPOSE 3000
 CMD ["npm", "run", "start"]
+
+# Stage 4: development image
+FROM node:18-alpine AS dev
+WORKDIR /app
+ENV NODE_ENV=development
+COPY --from=deps /app/node_modules ./node_modules
+COPY . .
+EXPOSE 3000
+CMD ["npm", "run", "dev"]
