--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,11 +27,15 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+      target: dev
     depends_on: [backend]
     ports:
       - '3000:3000'
     environment:
       - NEXT_PUBLIC_API_BASE=http://localhost:4000
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules # Prevents overwriting node_modules
 
 
 volumes:
