--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,23 @@ services:
     image: mongo:6
     restart: always
     environment:
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: qwerty
       MONGO_INITDB_DATABASE: budget-tracker
     volumes:
       - mongo-data:/data/db
+  
+  mongo-express:
+    image: mongo-express
+    restart: always
+    depends_on:
+      - mongo
+    ports:
+      - '8081:8081'
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: admin
+      ME_CONFIG_MONGODB_ADMINPASSWORD: qwerty
+      ME_CONFIG_MONGODB_SERVER: mongo
 
   backend:
     build:
@@ -18,7 +32,7 @@ services:
     ports:
       - '4000:4000'
     environment:
-      - MONGO_URI=mongodb://mongo:27017/budget-tracker
+      - MONGO_URI=mongodb://admin:qwerty@mongo:27017/budget-tracker?authSource=admin
     volumes:
       - ./backend:/app
     restart: always
